# app/docs/swagger.json
@@ -863,7 +863,7 @@
                 }
             }
         },
-        "/system/consumption/noticeRead/{ids}": {
+        "/system/consumption/noticeRead/{id}": {
             "put": {
                 "security": [
                     {
@@ -4364,7 +4364,13 @@
         },
         "systemModels.ConsumptionNoticeVo": {
             "type": "object",
+            "required": [
+                "type"
+            ],
             "properties": {
+                "createName": {
+                    "type": "string"
+                },
                 "createTime": {
                     "description": "创建时间",
                     "type": "integer"
@@ -4384,6 +4390,9 @@
                 },
                 "txt": {
                     "description": "通知文本",
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
@@ -4823,10 +4832,6 @@
                 },
                 "createTime": {
                     "description": "创建时间",
-                    "type": "integer"
-                },
-                "deptId": {
-                    "description": "部门ID",
                     "type": "integer"
                 },
                 "deptIds": {
